<?xml version="1.0"?>
<package format="2">
  <name>laserscan_stacker</name>
  <version>0.1.0</version>
  <description>The laserscan_stacker package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="cathrine.m.oik@gmail.com">Katerina Oikonomou</author>

  <maintainer email="cathrine.m.oik@gmail.com">Katerina Oikonomou</maintainer>
  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_filterslaser_geometry</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <depend package="laser_geometry"/>
  <depend package="tf"/>
  <depend package="sensor_msgs" />

  </export>
</package>
